# quant-lab

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.ai-bootstrap/: part-000  part-001  part-002  part-003  part-004  part-005  part-006  part-007  part-008  part-009  part-010  part-011  part-012  part-013  part-014  part-015  part-016  part-017  part-018  part-019  part-020  part-021  part-022
artifacts/: audit_evidence_import.csv  current_factor_discovery_root_cause.json  current_nas_migration_inventory.json  factor_retirement_registry.csv  final_factor_research_status.json  historical_trial_import.csv  hypothesis_registry_seed.json  resource_usage.csv  shadow_run_metrics.csv  statistical_regression_results.csv
configs/: paper_strategy_proposals.yaml  quant_lab.yaml  v5_telemetry_remote.yaml
contracts/: alpha_evidence.schema.yaml  market_bar.schema.yaml  v5_quant_lab_contract.yaml
deploy/: check_forward_v221_health.sh  install_forward_v221_systemd.sh  uninstall_forward_v221_systemd.sh
docs/: AI_RESEARCH_NAS_WORKER.md  ALPHA_EVIDENCE.md  ALPHA_FACTORY_NAS_RESEARCH_PLANE.md  API_CONTRACT.md  ARCHITECTURE.md  CODEX_TASKS.md  COST_MODEL.md  ENTRY_QUALITY_HISTORY_NAS_PLANE.md  EXPERT_EXPORT_NAS_PLANE.md  FACTOR_FACTORY.md  FACTOR_FACTORY_NAS_RESEARCH_PLANE.md  FACTOR_RESEARCH_V2.md  FACTOR_RETIREMENT_POLICY.md  FEATURES.md  LAKE_OPTIMIZATION.md  NAS_FACTOR_RESEARCH_DEPLOYMENT.md  OKX_READONLY_PRIVATE.md  PRODUCTION_SCHEDULE.md  RESEARCH_HYPOTHESIS_LIFECYCLE.md  RESEARCH_TRIAL_LEDGER.md  TRADE_LEVEL_HISTORY_NAS_RESEARCH_PLANE.md  V5_INTEGRATION.md  (+6 more)
(+787 files in other folders)
