[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-lab"
version = "0.1.0"
description = "Read-only quantitative research middle platform for qyun2."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "quant-lab maintainers" },
]
license = { text = "Proprietary" }
dependencies = [
    "duckdb>=1.0",
    "fastapi>=0.115",
    "httpx>=0.27",
    "polars>=1.0",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "streamlit>=1.36",
    "typer>=0.12",
    "uvicorn>=0.30",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
qlab = "quant_lab.cli:app"
qlab-web = "quant_lab.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"quant_lab.ai_research.prompts" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
